Fix alignment of infobox star and heart icons

--- a/style.css
+++ b/style.css
@@ -148,6 +148,8 @@
 
 .amc_ranking {
   line-height: 1;
+  display: flex;
+  align-items: center;
 }
 
 .amc_rankings {
